--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/menangen/webgl-json-render#readme",
   "dependencies": {
+    "pixi.js": "^4.5.1",
     "express": "^4.14.0"
   }
 }
